# Tool-Use-DPO

./: .env.example  .gitignore  Makefile  README.md  Tool_Use_DPO_Colab.ipynb  pyproject.toml  requirements.txt
configs/: dpo_config.yaml  sft_config.yaml
scripts/: debug_outputs.py  evaluate.py  evaluate_baseline.py  generate_data.py  inference.py  train_dpo.py  train_sft.py
src/: __init__.py  config_parser.py  dataset.py  model.py  utils.py  validation.py
